# gdsr-test

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/gdsr/: Cargo.toml
crates/gdsr-viewer/: Cargo.toml
crates/gdsr-viewer/src/: main.rs
crates/gdsr/src/: lib.rs
