[package]
name = "gdsr-viewer"
version = "0.0.1-alpha.1"
description = "A test binary crate"
repository = "https://github.com/MatthewMckee4/gdsr-test"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[package.metadata.dist]
dist = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
gdsr = { workspace = true }
